--- a/doc/fr_FR/index-temp.asciidoc
+++ b/doc/fr_FR/index-temp.asciidoc
@@ -143,10 +143,12 @@ Il faut retirer le bridge de l'application "Maison".
 [IMPORTANT]
 A n'effectuer que sur conseil d'un membre du forum et il faut retirer le pont de l'application "Maison".
 
-* *Plateforme Homebridge supplémentaire* : Permet de rajouter manuellement un équipement.
+* *Plateforme Homebridge supplémentaire* : Permet de rajouter manuellement un plugin Homebridge de type plateforme (homebridge-camera-ffmpeg ou homebridge-nest par exemple).
+
+* *Accessoire Homebridge supplémentaire* : Permet de rajouter manuellement un plugin Homebridge de type accessoire (homebridge-freemote par exemple).
 
 [IMPORTANT]
-Réservé à un public averti. Il n'y aura aucun support pour cette partie (permet par exemple d'ajouter des cameras à Homebridge).
+Réservé à un public averti. Il n'y aura aucun support pour ces deux dernières parties.
 
 Une fois les cases *Utilisateur, nom Homebridge et PIN Homebridge* correctement renseignées, la configuration se finalise en cliquant sur **Sauvegarder**. Le démon redémarre.
 
@@ -916,6 +918,51 @@ Remplacer les valeurs xxx.xxx.xxx.xxx par l'adresse IP la caméra et  <Local_Acc
 
 image::../images/camera.png[]
 
+==== Configurer plusieurs caméras (ou plateformes)
+
+Pour configurer plusieurs caméras, il suffit de mettre une barre | entre les deux configurations.
+
+[source,]
+----
+{
+  "platform": "Camera-ffmpeg",
+  "cameras": [
+	{
+	  "name": "Cellier 1",
+	  "videoConfig": {
+		"source": "-re -f mjpeg -i http://login:password@adresseIP/mjpeg.cgi",
+		"stillImageSource": "-f mjpeg -i http://login:password@adresseIP/image/jpeg.cgi",
+		"maxStreams": 2,
+		"maxWidth": 640,
+		"maxHeight": 480,
+		"maxFPS": 30,
+		"vcodec": "h264"
+	  }
+	}
+  ]
+}
+|
+{
+"platform": "Camera-ffmpeg",
+"cameras": [
+{
+"name": "Salon 1",
+"videoConfig": {
+"source": "-re -i http://adresseip/xxxxxxx/live/files/high/index.m3u8",
+"stillImageSource": "-i http://adresseIP/xxxxxx/live/snapshot_720.jpg",
+"maxStreams": 2,
+"maxWidth": 1280,
+"maxHeight": 720,
+"maxFPS": 30
+}
+}
+]
+}
+
+----
+
+*Cela est également valable pour tout autre plateforme comme le thermostat NEST par exemple.*
+
 === Type Générique Custom
 
 Le type générique "Custom" permet de faire remonter n'importe quelles valeurs "info" de tous types dans Hombridge. *Quelques exemples sont décris dans ce chapritre.*
@@ -961,81 +1008,40 @@ image::../images/custom-7.png[]
 
 image::../images/custom-6.png[]
 
-=== Plugins spécifiques
+=== Plugin spécifiques
 
 ==== Plugin "Thermostat"
 
 [IMPORTANT]
-La fonctionnalité du thermostat dans Homebridge est compatible uniquement (pour l'intant) avec le plugin Jeedom "Thermostat". Pour configurer le plugin "Thermostat", il faut se référer à la http://https://jeedom.github.io/documentation/plugins/thermostat/fr_FR/index.html[documentation du plugin].
-
+Pour configurer le plugin "Thermostat", il faut se référer à la http://https://jeedom.github.io/documentation/plugins/thermostat/fr_FR/index.html[documentation du plugin].
 
 ===== Configuration
-
-Dans HomeKit, le thermostat est géré suivant 4 modes : "Éteint", "Chauffer" "Climatiser" et "Automatique". 
-
-Pour utiliser le thermostat dans HomeKit, l'application Eve est beaucoup plus fonctionnelle que l'application Maison. Il est d'ailleur conseillé de l'utiliser.
-
-image::../images/thermostat1.png[]
-
-* *Température cible* : Température de consigne;
-
-* *Mode* : Sélection du mode du thermostat;
-
-* *Protection enfants* : Permet de verrouiller les réglages du thermostat;
-
-* *Statut* : Indique si le chauffage ou la climatisation émet ou pas de la chaleur ou du froid.
 
 Seuls les modes "Chauffer" et "Refroidir" sont à configurer. Il faut attribuer un mode du plugin "Thermostat" à un mode de HomeKit.
 
 image::../images/thermostat.png[]
 
+===== Présentation
+
+image::../images/thermostat1.png[]
+
+* *A* : Température Cible ou Consigne : Température envoyée au plugin Thermostat (Passe en mode Auto sur Maison et Eve / Mode Aucun sur widget Thermostat)
+* *B* : Température Ambiante : Température de référence pour le plugin Thermostat.
+* *C* : Commande de modification de la Consigne A : Augmenter ou diminuer la température à l’aide du curseur. Cela aura pour action de modifier également le mode du chauffage E qui passera à AUCUN dans le dashboard Jeedom.
+* *D* : Statut du thermostat retourné par le plugin Thermostat : Arrêté (ou Désactivé ou Eteint) (Rond vert dans Maison) / Chauffage (Rond Orange dans Maison) / Climatisation (Rond Bleu dans Maison).
+
+* *E* : Mode Auto (dans Maison ou Eve) : correspond au mode Aucun dans Jeedom où le Plugin Thermostat décide de ce qu'il doit faire en fonction de la température qu'on lui envoi. Ce mode permets de régler une température cible via le curseur C
+
+* *F* : Mode Clim / Refroidir : Mode customisé associé manuellement dans la configuration du Thermostat dans le Plugin Homebridge. Permet de lancer le mode associé dans le plugin Thermostat. (Repasse en mode AUTO, si une température cible est donnée)
+
+* *G* : Mode Chauf / Chauffer : Mode customisé associé manuellement dans la configuration du Thermostat dans le Plugin Homebridge. Permet de lancer le mode associé dans le plugin Thermostat. (Repasse en mode AUTO, si une température cible est donnée)
+
+* *H* : Eteint / Off : permet d'éteindre le thermostat.
+* *I* : Verrouillage/Protection Enfants (uniquement dans Eve) : permet de verrouiller le thermostat. (modifié)
+
 ===== Utilisation
 
-Seuls les modes "CHAUF", "CLIM" et "ÉTEINT" fonctionneront. Le Mode "AUTO" est non fonctionnel. Pour mettre à l'arrêt le système de chauffage ou climatisation, il faut sélectionner le mode "ÉTEINT".
-
-[underline]#Mise en route du chauffage#
-
-* *CHAUF* : Active le mode du plugin "Thermostat" pour la partie chauffage.
-
-image::../images/chauffe.png[]
-
-La température cible passe automatique à la température de consigne réglée dans le plugin "Thermostat".
-
-Le mode passe en "Chauffage". Cela ne veut pas dire que le radiateur émet de la chaleur. C'est juste que le système de chauffage est en route. Le statut indique si le radiateur émet de la chaleur.
-
-image::../images/statut.png[]
-
-*Statut arrêté" : Le radiateur n'émet pas de chaleur.
-
-*Statut chauffage" : Le radiateur émet de la chaleur.
-
-Il est également possible de régler une température de consigne directement depuis l'application Eve ou via Siri.
-
-image::../images/sirichauff.png[]
-
-Le chauffage passe en mode manuel.
-
-image::../images/forcechauff.png[]
-
-Le mode passe en "Désactivé", c'est normal. Dans certain cas, il peut rester dans la position où il était avant la demande de changement de la température de consigne.
-
-La température de consigne passe bien à la valeur demandée. Si la température ambiante est infèrieure à la température de consigne, le chauffage se mettra en route. Le statut passera donc en "Chauffage".
-
-[underline]#Mise en route de la climatisation#
-
-Le fonctionnement de la climatisation est indentique au fonctionnement du chauffage.
-
-En cliquant sur "CLIM", on active le mode de climatisation réglé dans le plugin "Thermostat".
-
-image::../images/clim.png[]
-
-On peut modifier la température de consigne.
-
-image::../images/siriclim.png[]
-
-Le fonctionnement de la climatisation passe en mode manuel.
-
-image::../images/climforce.png[]
+En cliquant sur "CHAUF" ou "Chauffer", on active le mode du thermostat associé. Idem pour "CLIM" ou "Refroidir".
 
 ==== Plugin "Alarme"
 
@@ -1111,6 +1117,13 @@ image::../images/reinitialisation.png[]
 == Changelog
 
 === Plugin HomeBridge
+
+==== v1.3.4 (29-11-2017)
+    * Gestion automatique Xiaomi PM2.5.
+    * Réécriture du mode de fonctionnement des thermostats, plus logique :)
+    * Accessoire supplémentaire pour installer les plugin Homebridge qui ne publient qu'un accessoire
+    * Mise à jour documentation.
+    * Corrections de bugs
 
 ==== v1.3.3 (13-11-2017)
     * Modification documentation
