[ROBOT] Action all

--- a/doc/de_DE/changelog.asciidoc
+++ b/doc/de_DE/changelog.asciidoc
@@ -1,8 +1,18 @@
 === Plugin HomeBridge
 
-==== v1.3.4 (??)
-    * Gestion automatique Xiaomi PM2.5
+==== v1.3.5 (???)
+    * Suppression du besoin de selection de l'utilisateur
+    * Plus besoin que les actions réfèrent l'état auxquel elles sont liées sauf si multi-prises ou multi-relay (on split)
+    * QRCode pour configurer le bridge (attention, les cameras et plateformes supplémentaires doivent toujours scanner le PIN)
+    * Plus jolie config
+    * Afficher une erreur si l'adresse interne est en https
+    * Mise à jour de Homebridge en 0.4.33 et HAP-Nodejs en 0.4.36
+
+==== v1.3.4 (29-11-2017)
     * Réécriture du mode de fonctionnement des thermostats, plus logique :)
+    * Accessoire supplémentaire pour installer les plugin Homebridge qui ne publient qu'un accessoire
+    * Mise à jour documentation.
+    * Corrections de bugs
 
 ==== v1.3.3 (13-11-2017)
     * Modification documentation
