--- a/doc/de_DE/migration.asciidoc
+++ b/doc/de_DE/migration.asciidoc
@@ -1,6 +1,6 @@
 == Migration depuis le plugin App Mobile
 
-Le nouveau plugin Homebridge importe automatiquement la configuration Homebridge du plugin App Mobile. Il n'y a aucune opération à faire. 
+Das neue Homebridge-Plugin importiert automatisch die Homebridge-Konfiguration vom Mobile-App Plugin. Es ist kein weiterer Eingriff notwendig. 
 
 Lorsque l'importation est terminée, la rubrique Homebridge disparait des paramètres du plugin App Mobile. 
 
