--- a/doc/de_DE/index-temp.asciidoc
+++ b/doc/de_DE/index-temp.asciidoc
@@ -1115,7 +1115,7 @@ Les actions définies dans la partie "Réinitialisation" du plugin "Alarme" vont
 
 image::../images/reinitialisation.png[]
 
-== Changelog
+== Änderungsprotokoll
 
 === Plugin HomeBridge
 
@@ -1138,7 +1138,7 @@ image::../images/reinitialisation.png[]
     * Gestion des actions Ouvrir et Fermer pour les portes de garages.
     * DebugInfo affiche maintenant le log de création d'accessoires (si celui-ci n'est pas encore tronqué)
 
-==== v1.3.2 (09 et 10 et 12-11-2017)
+==== v1.3.2 (09 und 10 und 12-11-2017)
     * Fichier fusionné pour la doc
     * Autre bug sur Inversion corrigé
     * Bug Siri "Ouvre tous les volets du salon" corrigé
