--- a/doc/fr_FR/installationPluginHB.asciidoc
+++ b/doc/fr_FR/installationPluginHB.asciidoc
@@ -50,7 +50,7 @@ image::../images/dependances-homebridge.png[]
 
 Les fichiers log permettent d'analyser pas à pas l'activité interne du processus et ses interactions avec son environnement.
 
-Ces fichiers peuvent être nécessaires en cas de disfonctionnement du plugin.
+Ces fichiers peuvent être nécessaires en cas de dysfonctionnement du plugin.
 
 image::../images/log.png[]
 
