--- a/doc/fr_FR/index-temp.asciidoc
+++ b/doc/fr_FR/index-temp.asciidoc
@@ -1119,7 +1119,7 @@ image::../images/reinitialisation.png[]
 
 === Plugin HomeBridge
 
-==== v1.3.6 (???)
+==== v1.4.0 (???)
     * Meilleur code de génération pour le QRcode (en php)
     * Changement de plusieurs libellés dans la configuration du plugin.
     * Nouveau type spécifique homebridge : "Occupation" légèrement différent de "mouvement" dans Maison et dans Eve, il est plus clair pour par exemple afficher une présence (plutot qu'un mouvement).
@@ -1135,11 +1135,11 @@ image::../images/reinitialisation.png[]
       ** Interrupteur Programmable Binaire (Double Click) (Homebridge) : Il s'agit d'un interrupteur ou la commande de type info est un binaire et correspond à un double click sur le bouton.
       ** Interrupteur Programmable Binaire (Long   Click) (Homebridge) : Il s'agit d'un interrupteur ou la commande de type info est un binaire et correspond à un long click sur le bouton.
     * Affichage des graphiques dans l'application Eve (support Alpha). Fonctionne pour les types suivants :
-      ** Température
-      ** Humidité
-      ** Pression
-      ** Porte ou Fenêtre
-      ** Mouvement
+      ** Température (chaque point de donnée est une moyenne des 10min précédentes)
+      ** Humidité (chaque point de donnée est une moyenne des 10min précédentes)
+      ** Pression (chaque point de donnée est une moyenne des 10min précédentes)
+      ** Porte ou Fenêtre ("Dernière ouverture pas encore foncitonnel et "Nombre d'ouvertures" compte depuis le dernier démarrage du démon Homebridge)
+      ** Mouvement ("Dernier mouvement" pas encore fonctionnel)
 [IMPORTANT]      
       Il s'agit d'un support Alpha, juste car c'est fun :) Les graphiques ont été développés par ingénierie inversée des composants Elgato Eve et il peut y avoir des incohérences. Les données des graphiques sont les données collectées lorsque le démon Homebridge est démarré, il peut donc manquer certaines informations. Les graphiques sont là à titre informatif.
 
