--- a/core/i18n/fr_FR.json
+++ b/core/i18n/fr_FR.json
@@ -81,5 +81,80 @@
     "plugins\/homebridge\/desktop\/js\/platformFile.js": {
         "Sauvegarde de la configuration réussie. Relancez le demon": "Sauvegarde de la configuration réussie. Relancez le demon",
         "Echec de la sauvegarde de la configuration : ": "Echec de la sauvegarde de la configuration : "
+    },
+    "plugins\/homebridge\/desktop\/modal\/object.homebridge.php": {
+        "Cliquez sur un équipement pour voir ses types génériques": "Cliquez sur un équipement pour voir ses types génériques",
+        "Activer la pièce": "Activer la pièce",
+        "Type Générique de l'objet": "Type Générique de l'objet",
+        "Sauvegarder": "Sauvegarder",
+        "  Envoyer à Homebridge  ": "  Envoyer à Homebridge  ",
+        "Id Cmd": "Id Cmd",
+        "Nom de la Commande": "Nom de la Commande",
+        "Type Générique": "Type Générique",
+        "Icône": "Icône",
+        "Aucun": "Aucun",
+        "Alarme": "Alarme",
+        "Chauffage": "Chauffage",
+        "Generic": "Generic",
+        "Haut-Parleur": "Haut-Parleur",
+        "Interrupteur": "Interrupteur",
+        "Interrupteur Programmable": "Interrupteur Programmable",
+        "Lumière": "Lumière",
+        "Portail\/Garage": "Portail\/Garage",
+        "Prise": "Prise",
+        "Qualité D'air": "Qualité D'air",
+        "Serrure": "Serrure",
+        "Sirène": "Sirène",
+        "Thermostat": "Thermostat",
+        "Volet": "Volet",
+        "Personnalisation des états, indiquez ici la valeur de l'état correspondant au type d'action": "Personnalisation des états, indiquez ici la valeur de l'état correspondant au type d'action",
+        "Simple Click": "Simple Click",
+        "Double Click": "Double Click",
+        "Long Click": "Long Click",
+        "Merci de vider les valeurs que vous n'utilisez pas (pas zéro, vide !)": "Merci de vider les valeurs que vous n'utilisez pas (pas zéro, vide !)",
+        "Modifications sauvegardées avec succès": "Modifications sauvegardées avec succès",
+        "Sauvegarde effectuée avec succès": "Sauvegarde effectuée avec succès",
+        "Sauvegarde de la configuration réussie.": "Sauvegarde de la configuration réussie.",
+        "Echec de la sauvegarde de la configuration : ": "Echec de la sauvegarde de la configuration : "
+    },
+    "plugins\/homebridge\/desktop\/modal\/info_app.homebridge.php": {
+        "Copier tout dans le presse-papier": "Copier tout dans le presse-papier",
+        "Copier tout": "Copier tout",
+        "Environnement NodeJS :": "Environnement NodeJS :",
+        "Copier dans le presse-papier": "Copier dans le presse-papier",
+        "Version NodeJS": "Version NodeJS",
+        "Version NPM": "Version NPM",
+        "Prefix Global": "Prefix Global",
+        "Root Global": "Root Global",
+        "Architecture": "Architecture",
+        "Homebridge-Jeedom locale": "Homebridge-Jeedom locale",
+        "Homebridge-Jeedom en ligne": "Homebridge-Jeedom en ligne",
+        "Utilisateur sélectionné": "Utilisateur sélectionné",
+        "Branche": "Branche",
+        "Code d'installation :": "Code d'installation :",
+        "Pièces :": "Pièces :",
+        "OK": "OK",
+        "Périphériques :": "Périphériques :",
+        "Commandes :": "Commandes :",
+        "Scénarios :": "Scénarios :",
+        "Création Accessoires :": "Création Accessoires :",
+        "Plateforme Homebridge supplémentaire :": "Plateforme Homebridge supplémentaire :",
+        "Accessoire Homebridge supplémentaire :": "Accessoire Homebridge supplémentaire :",
+        "Custom Datas :": "Custom Datas :",
+        "Environnement Avahi :": "Environnement Avahi :",
+        "Environnement IP :": "Environnement IP :",
+        "config.json :": "config.json :",
+        "DB Homebridge :": "DB Homebridge :",
+        "Config du Bridge :": "Config du Bridge :",
+        "Cache Identifiants :": "Cache Identifiants :",
+        "Cache Homebridge :": "Cache Homebridge :"
+    },
+    "plugins\/homebridge\/desktop\/modal\/accessoryHB.homebridge.php": {
+        "!!! Cette configuration est en mode avancé !!! à vos risques et périls !!! aucun support ne sera donné !!!": "!!! Cette configuration est en mode avancé !!! à vos risques et périls !!! aucun support ne sera donné !!!",
+        "Le contenu doit être un objet JSON de type accessory": "Le contenu doit être un objet JSON de type accessory",
+        "Si de multiples accessoires, les séparer par |": "Si de multiples accessoires, les séparer par |",
+        "le plugin homebridge correspondant doit être installé avec <i>npm<\/i>": "le plugin homebridge correspondant doit être installé avec <i>npm<\/i>",
+        "NB : Un nouvel Accessoire doit être ajouté à nouveau dans l'application \"Maison\" avec le même code PIN": "NB : Un nouvel Accessoire doit être ajouté à nouveau dans l'application \"Maison\" avec le même code PIN",
+        "Sauvegarder les changements": "Sauvegarder les changements"
     }
 }
